--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
 </head>
 <body>
 <nav class="navbar navbar-inverse">
@@ -20,7 +19,7 @@
             </button>
             <a class="navbar-brand" href="{% url 'main:translation_list' %}">Translation corrector</a>
         </div>
-        <div class="collapse navbar-collapse" id="topNavBar">
+        <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="">
                     <a href="{% url 'main:upload_files' %}">Upload Files</a>
